--- a/index.html
+++ b/index.html
@@ -190,8 +190,8 @@ if(typeof Muse == "undefined") window.Muse = {}; window.Muse.assets = {"required
       </div>
       <div class="grpelem shared_content" id="u50020" data-content-guid="u50020_content"><!-- simple frame --></div>
       <div class="clearfix grpelem shared_content" id="pu49600-4" data-content-guid="pu49600-4_content"><!-- column -->
-       <a class="nonblock nontext clearfix colelem shared_content" id="u49600-4" href="news-ias.html" data-content-guid="u49600-4_content"><!-- content --><p>IAS SOCIETY LAUNCH - IEEE SB CEK</p></a>
-       <a class="nonblock nontext clearfix colelem shared_content" id="u49603-4" href="news-ias.html" data-content-guid="u49603-4_content"><!-- content --><p>IAS INAGURATION PROGRAM, ADDRESSING THE NEW EXECOM</p></a>
+       <a class="nonblock nontext clearfix colelem shared_content" id="u49600-4" href="news.html" data-content-guid="u49600-4_content"><!-- content --><p>IAS SOCIETY LAUNCH - IEEE SB CEK</p></a>
+       <a class="nonblock nontext clearfix colelem shared_content" id="u49603-4" href="news.html" data-content-guid="u49603-4_content"><!-- content --><p>IAS INAGURATION PROGRAM, ADDRESSING THE NEW EXECOM</p></a>
       </div>
      </div>
      <div class="verticalspacer" data-offset-top="3667" data-content-above-spacer="3667" data-content-below-spacer="243"></div>
